--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,9 @@
   "description": "This is all about hotel booking app backend",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node":"14.x"
+  },
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
